Fix adaptive menu z-index

--- a/src/containers/Header/components/AdaptiveMenu/AdaptiveMenu.module.scss
+++ b/src/containers/Header/components/AdaptiveMenu/AdaptiveMenu.module.scss
@@ -9,6 +9,7 @@
   width: 100vw;
   min-height: 100vh;
   pointer-events: none;
+  z-index: 1;
 
   &::before {
     content: "";
